No locale link on narrow devices - requires fix

--- a/static/css/photos.css
+++ b/static/css/photos.css
@@ -291,6 +291,8 @@ _:-ms-fullscreen, :root #gallery-description { margin-bottom: 16px; } /* IE 11 *
 #locale-switch a {
     display: inline;
     text-decoration: underline; }
+@media (max-width: 900px) {
+#locale-switch { display: none; } }
 
 .toggle-locale {
     position: relative;
